--- a/Websites/Test Cart/home.html
+++ b/Websites/Test Cart/home.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <button type="submit">Hello, this is Ali, and this is a test!</button>
-    <p>This is a branch test!</p>
+    <p>I changed this!</p>
     <script src="projectJs.js" async defer></script>
   </body>
 </html>
