I changed button so that title updates when it is pressed.

--- a/Websites/Test Cart/cart.html
+++ b/Websites/Test Cart/cart.html
@@ -9,7 +9,9 @@
     <link rel="stylesheet" href="projectStylesheet.css" />
   </head>
   <body>
-    <button>Hello! This is Ali, and this is test 2.2! Yay!</button>
+    <button onclick="document.title.innnertext = 'This worked'">
+      Hello! This is Ali, and this is test 2.2! Yay!
+    </button>
     <script src="projectJs.js" async defer></script>
   </body>
 </html>
